--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "arena"
 version = "0.0.0"
 authors = ["Richard <Richard>"]
 edition = "2018"
+description = "A macro for create arenas of structs"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/richardanaya/arena"
+readme="README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
